syntax = "proto3";
package poslah.chats;

// We need to import the standard Struct type to handle arbitrary JSON payloads.
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service ChatsService {
  // A method to get all message-related events for a specific chat after a certain point.
  rpc GetLastMessageEvents(GetLastMessageEventsRequest) returns (GetLastMessageEventsResponse);
}

// The request message for the GetLastMessageEvents method.
message GetLastMessageEventsRequest {
  // The UUID of the chat to fetch events for.
  string chat_id = 1;

  // The `nn` of the message for which we are getting events.
  int64 message_nn = 2;

  // The event `nn` after which to start fetching.
  int64 after_nn = 3;
}

// A single event, containing its number and payload.
message LastMessageEvent {
  // The event's unique sequence number within the chat.
  int64 nn = 1;

  // The payload of the event (with message partial snapshot).
  google.protobuf.Struct payload = 2;
}

// The response message, which contains a list of the found events.
message GetLastMessageEventsResponse {
  // createdAt from oldest of returning events (if any returned)
  optional google.protobuf.Timestamp oldest_created_at = 1;

  // An array of LastMessageEvent objects.
  repeated LastMessageEvent events = 2;
}

